--- a/css/style.css
+++ b/css/style.css
@@ -351,28 +351,30 @@ hr {
 	padding-top:70px;
 	padding-bottom:70px;
 	background:#f4f4f4;
-}
-
-div.figure{
-  margin-left: 230px;
+  position: relative;
 }
 
 #projects img {
 	border-radius: 8px;
+  position: relative;
+  float: right;
+  margin: 3em 0;
 }
 
-.projects {
-	margin-top:60px;
-	margin-bottom:30px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.col-md-4 {
+  vertical-align: top;
+  display: inline-block;
+  text-align: center;
+}
+
+.caption {
+  display: block;
 }
 
 #projects .text-center {
 	padding-top:20px;
-	margin-bottom:50px;
-	padding-bottom:20px;
+	margin-bottom:30px;
+	padding-bottom:10px;
 }
 
 figure.effect-steve img {
@@ -392,19 +394,20 @@ figure.effect-steve:hover img {
 
 img.cv {
   height: 80%;
-  width: 700px;
+  width: 100%;
   margin: 20px;
 }
 
 .parallax-window {
-  min-height: 2500px;
+  min-height: 2300px;
   background: transparent;
+  margin-bottom: 0px;
 }
 
 .parallax-window .text-center h2 {		
 	font-size:60px;
-	margin-top:90px;
-	padding-top:5px;
+	
+	padding-top:50px;
 	padding-bottom:5px;
 	color:#000000;
 }
@@ -418,7 +421,7 @@ footer {
 
 #contact {
 	background:url('../img/green.jpg');
-  padding-top: 70px;
+  padding-top: 40px;
 	padding-bottom:80px;
   background-size: cover;
 }
@@ -430,12 +433,10 @@ footer {
 
 #contact ul {
 	list-style:none;
-	margin-left:150px;
 	font-size:13px;
 }
 
 #contact h2 {
-  margin-left:200px;
 	color:#000;
 	margin-bottom:30px;
 	font-size:25px;
@@ -443,7 +444,7 @@ footer {
 
 ul.social-network {
 	list-style:none;
-	margin-top:20px;	
+	margin-top:10px;	
 	padding:10px;
 	transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
